--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3bc0ca71",
    "metadata": {},
    "outputs": [
@@ -850,14 +850,14 @@
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "\n",
-    "car_data = pd.read_csv('C:/Users/Acer/OneDrive/Desktop/Gabi/python/sprint_7/vehicles_us/vehicles_us.csv') # leer los datos\n",
+    "car_data = pd.read_csv('vehicles_us.csv') # leer los datos\n",
     "fig = px.histogram(car_data, x=\"odometer\") # crear un histograma\n",
     "fig.show() # crear gráfico de dispersión"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "46daee98",
    "metadata": {},
    "outputs": [
@@ -1705,7 +1705,7 @@
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "\n",
-    "car_data = pd.read_csv('C:/Users/Acer/OneDrive/Desktop/Gabi/python/sprint_7/vehicles_us/vehicles_us.csv') # leer los datos\n",
+    "car_data = pd.read_csv('vehicles_us.csv') # leer los datos\n",
     "fig = px.scatter(car_data, x=\"odometer\", y=\"price\") # crear un gráfico de dispersión\n",
     "fig.show() # crear gráfico de dispersión"
    ]
